funland/media/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    # renovate: image=ghcr.io/seerr-team/seerr
    app.kubernetes.io/version: "v3.5.0"
    app.kubernetes.io/component: request-manager
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
  ports:
    - port: 5055
      targetPort: 5055
